# color-differences-analyzer

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
color_differences_analyzer/: __main__.py  main.py
search/: search_index.json
tests/: test_color_differences_analyzer.py
