[tool.poetry]
name = "color-differences-analyzer"
version = "0.2.0"
description = "Command line interface to analyze differences of colors from images implemented with Python."
authors = ["Leynier Gutiérrez González <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/color-differences-analyzer"
repository = "https://github.com/leynier/color-differences-analyzer"
documentation = "https://github.com/leynier/color-differences-analyzer"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
cda = "color_differences_analyzer.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.3.2,<0.5.0"
numpy = "^1.20.3"
colormath = "^3.0.0"
scikit-image = ">=0.18.1,<0.20.0"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^22.1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
